--- a/.github/workflows/update-site.yml
+++ b/.github/workflows/update-site.yml
@@ -35,6 +35,7 @@ jobs:
           python code/fill_ranking_page.py
           python code/fill_teams_page.py
           python code/rss_news.py
+          date -u +"Ultimo aggiornamento: %d-%m-%Y %H:%M:%S UTC" > last_updated.md
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
