--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,9 +4,10 @@ project:
 
 website:
   title: "CICLISMO REALE"
-  home: index.qmd 
   navbar:
     left:
+      - href: index.qmd
+        text: Home
       - squadre.qmd
       - cq_ranking.qmd
 
